styled main contaner, fixed nav clipping

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -24,3 +24,11 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
+ main {
+   width: 450px;
+   background-color: white;
+   margin: auto;
+   margin-top: 100px;
+   /* padding: 10px; */
+ }
